updated for 2023, added subfolder support, various quality enhancements

--- a/Vault-UserCloudUpload/UploadPreview.resx
+++ b/Vault-UserCloudUpload/UploadPreview.resx
@@ -130,7 +130,7 @@
     <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="UploadPreview.IconOptions.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAQAQAABMLAAATCwAAAAAAAAAA
         AAD///8A////AP///wD///8A////AP///wD///8A5o8X/+aPF/////8A////AP///wD///8A////AP//
